--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -7,6 +7,35 @@
   <style>
     /* Write your CSS code here */
 
+    #div {
+      padding: 20px;
+      border: 10px solid black;
+      background-color: cadetblue;
+      padding-top: -0px;
+      padding-bottom: 30px;
+      width: 200px;
+      height: 200px;
+    }
+
+    #divv {
+      margin-left: 260px;
+      width: 200px;
+      height: 200px;
+      background-color: gold;
+      border: 10px solid black;
+      border-top: 20px solid;
+      border-bottom: 20px solid;
+    }
+
+    #divvv {
+      width: 200px;
+      height: 200px;
+      margin-left: 40px;
+      background-color: indianred;
+      border: 10px solid black;
+      border-top: 20px solid;
+      border-bottom: 20px solid;
+    }
   </style>
 </head>
 
@@ -28,6 +57,16 @@ Hint: Use the CSS inspector in Chrome.
 8. Set the 3rd div to have a 10px border 
 9. Set the margins for the divs so that each box corner touches the other. (See the goal image)
 -->
+
+<div class="Same" id="div">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+    id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+    dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p>
+</div>
+<div id="divv">
+  <p></p>
+</div>
+<div id="divvv"></div>
 
 </body>
 
