--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,20 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <title>Kartikey's Motivation</title>
+</head>
+<body>
+  <div id="divv">
+    <img src="./assets/images/daenerys.jpeg" alt="">
+    <h1>Kartikey's Motivation</h1>
+    <p>Just Work Smart</p>
+  </div>
+</body>
+</html>
